limit memory to 2GB